apps/web/src/global.scss
/*
 * App Global CSS
 * ----------------------------------------------------------------------------
 * Put style rules here that you want to apply globally. These styles are for
 * the entire app and not just one component. Additionally, this file can be
 * used as an entry point to import other CSS/Sass files to be included in the
 * output CSS.
 * For more information on global stylesheets, visit the documentation:
 * https://ionicframework.com/docs/layout/global-stylesheets
 */

/* Core CSS required for Ionic components to work properly */
@import "@ionic/angular/css/core.css";

/* Basic CSS for apps built with Ionic */
@import "@ionic/angular/css/normalize.css";
@import "@ionic/angular/css/structure.css";
@import "@ionic/angular/css/typography.css";
@import "@ionic/angular/css/display.css";

/* Optional CSS utils that can be commented out */
@import "@ionic/angular/css/padding.css";
@import "@ionic/angular/css/float-elements.css";
@import "@ionic/angular/css/text-alignment.css";
@import "@ionic/angular/css/text-transformation.css";
@import "@ionic/angular/css/flex-utils.css";

/**
 * Ionic Dark Mode
 * -----------------------------------------------------
 * For more info, please see:
 * https://ionicframework.com/docs/theming/dark-mode
 */

/* @import "@ionic/angular/css/palettes/dark.always.css"; */
/* @import "@ionic/angular/css/palettes/dark.class.css"; */
@import "@ionic/angular/css/palettes/dark.system.css";

/* Markdown CSS */
@import "github-markdown-css/github-markdown.css";

:root {
  --foreign-text-color: var(--ion-color-primary);
  --native-text-color: var(--ion-text-color);
  --box-shadow-md:
    0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
    0 1px 5px 0 rgba(0, 0, 0, 0.12);
}

@media (prefers-color-scheme: dark) {
  :root {
    --box-shadow-md:
      0 3px 1px -2px rgba(0, 0, 0, 0.4), 0 2px 2px 0 rgba(0, 0, 0, 0.28),
      0 1px 5px 0 rgba(0, 0, 0, 0.24);
  }
}

.text-content {
  span {
    cursor: pointer;
    color: var(--foreign-text-color);

    &.clicked {
      text-decoration: underline;
      text-decoration-color: var(--ion-color-primary);
      text-decoration-thickness: 2px;
      text-underline-offset: 3px;
    }
  }

  h1,
  h2 {
    border-bottom: none;
  }

  font-family: var(--content-font-family);
}

.markdown-body {
  font-family: var(--content-font-family);
  background-color: transparent;
}

span.hashtag {
  color: var(--ion-color-primary-tint);
  cursor: pointer;
}

.noselect {
  -webkit-user-select: none;
  user-select: none;
}

.plt-desktop .content-container {
  width: 768px !important;
  margin: auto;
}

ion-back-button {
  padding: 5px 10px 5px 5px;
}

.markdown-body blockquote {
  border: none;
}

